# ZeroSplitter

./: .gitignore  README.md  TODO.txt
common/src/: lib.rs
payload/src/: lib.rs
splitter/: Cargo.toml  build.rs
splitter/assets/: default_config.toml
splitter/assets/config_sections/: check_for_updates.toml  decoration_button.toml  heading.toml  zoom_level.toml
splitter/sql/: best_splits.sql  import_run.sql  import_split.sql  pass_rate.sql  pb_splits.sql
splitter/src/: app.rs  config.rs  database.rs  main.rs  run.rs  system.rs  theme.rs  ui.rs  update.rs
