[package]
name = "zerosplitter"
version = "0.2.4"
edition = "2024"

[dependencies]
bytemuck = "1"
common = {path = "../common"}
pretty_env_logger = "0.5"
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
toml = "0.9.8"

[dependencies.eframe]
version = "0.31"
default-features = false
features = ["default_fonts", "glow"]

[dependencies.windows]
version = "0.60"
features = [
	"Win32_System_ProcessStatus",
	"Win32_System_Threading",
	"Win32_System_Diagnostics_Debug",
	"Win32_System_LibraryLoader",
	"Win32_System_Memory",
	"Win32_Security"
]

[build-dependencies]
winresource = "0.1.27"
